Fixes spacing on post preview

--- a/cfgov/unprocessed/css/organisms/post-preview.less
+++ b/cfgov/unprocessed/css/organisms/post-preview.less
@@ -84,6 +84,10 @@
         margin-top: unit( @grid_gutter-width * 2 / @base-font-size-px, em);
     }
 
+    &_description {
+        margin-bottom: unit( @grid_gutter-width / 2 / @base-font-size-px, em);
+    }
+
     &_image-container {
         .respond-to-max(@bp-sm-max, {
             margin-bottom: unit( @grid_gutter-width / @base-font-size-px, em );
@@ -92,10 +96,12 @@
             .grid_column(4);
         });
     }
+
     &_image {
         display: block;
         width: 100%;
     }
+
     &_title a {
         .u-link__colors( @black, @pacific-80 );
     }
